force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/MJ_Reporting_Metrics_Callout_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Setting stores the MJMonthlyReportBatch data required for callouts like the access token, access token expiry datetime and last callout date time</description>
    <label>MJ Reporting Metrics Callout Data</label>
</CustomObject>