force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/accessToken__c.field-meta.xml
<CustomField>
    <fullName>accessToken__c</fullName>
    <inlineHelpText>MJ Reporting Token</inlineHelpText>
    <label>accessToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>