force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL to callout MJ Reporting data</description>
    <label>Base URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>