force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <description>The Date Time when the current access token will expire</description>
    <label>Expiry</label>
    <type>DateTime</type>
</CustomField>