force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/LastCallout__c.field-meta.xml
<CustomField>
    <fullName>LastCallout__c</fullName>
    <description>The DateTime when last callout was made</description>
    <label>Last Callout</label>
    <type>DateTime</type>
</CustomField>