force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/lastCalloutStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>lastCalloutStartDateTime__c</fullName>
    <inlineHelpText>The Last Date Time when our Batch was Run</inlineHelpText>
    <label>Last Callout Start Date Time</label>
    <type>DateTime</type>
</CustomField>