force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/MJ_Middleware_Password__c.field-meta.xml
<CustomField>
    <fullName>MJ_Middleware_Password__c</fullName>
    <description>The password required to callout the Token to get the MJ Reporting token</description>
    <label>MJ Middleware Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>