force-app/main/default/objects/MJ_Reporting_Metrics_Callout_Data__c/fields/MJ_Middleware_Username__c.field-meta.xml
<CustomField>
    <fullName>MJ_Middleware_Username__c</fullName>
    <description>The username for use to callout the Token for MJ Reporting</description>
    <label>MJ Middleware Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>